# rust-course-tue

./: .gitignore  Cargo.toml  README.md  ha.md
.github/workflows/: ci.yml
src/: main.rs  tests.rs
templates/: form.html  success.html
